<resources>
    <string name="app_name">library</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Password</string>
    <string name="no_account_question">Don\'t have an account?</string>
    <string name="create">Create</string>
    <string name="register">Register</string>
    <string name="display_name_hint">Display Name</string>
    <string name="password_hint">Password</string>
    <string name="navigation_draw_open">Open navigation draw</string>
    <string name="navigation_draw_close">Close navigation draw</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_book">Edit book</string>
    <string name="placeholder_title">Title</string>
    <string name="placeholder_description">Description</string>
    <string name="placeholder_authors">Authors</string>
    <string name="placeholder_genres">Genres</string>
    <string name="placeholder_year">Year</string>
    <string name="placeholder_pages">Pages</string>
    <string name="save_book">Save book</string>
    <string name="addBook">Add book</string>
    <string name="add_edit_book">Add/Edit book</string>
    <string name="prefs_url">MY_PREFS</string>
</resources>
